--- a/1 - Operadores y tipos de datos/1.4 - primitivos.md
+++ b/1 - Operadores y tipos de datos/1.4 - primitivos.md
@@ -60,10 +60,14 @@ Book.prototype.checkTitle = function() {
 
 > Más adelante veremos como hacer esto en ES6.
 
+> ¿Podríamos declarar el método checkTitle como propiedad directamente, sin prototype? La respuesta es si, pero tiene un incoveniente muy grande en cuanto a coste, ya que la función se vuelve a crear cada vez que creas una instancia del tipo Book.
+
 
 ## Ejercicios. 
 > 1 - Comprobar si Infinity es una propiedad del tipo Number. 
 >
-> 2 - Sobre el tipo Book comprobar que date es del tipo Date.
+> 2 - ¿Qué pasaría si metemos las propiedades title, date y editorial dentro del prototipe?
 >
-> 3 - Crear el tipo Editorial y comprobar que la editorial de Book sea del tipo Editorial que acabamos de crear.
+> 3 - Sobre el tipo Book comprobar que date es del tipo Date.
+>
+> 4 - Crear el tipo Editorial y comprobar que la editorial de Book sea del tipo Editorial que acabamos de crear.
